--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -19,28 +19,78 @@
 </head>
 <body>
   <div id="app">
-    <!--<div id="loading-screen" style="height:100%;width:100%;margin:0;position:fixed;background-color:#32333D;"> Esse loading não aparece quando a aplicação ja esta carregada na pagina e é realizado apenas um refresh
-    <div class="outer-circle">
-      <div class="inner-circle"></div>
-    </div>
-  </div>-->
-    <div id="loading-screen" style="height:100%;width:100%;margin:0;position:fixed;background-color:#32333D;color:beige">
-      <svg class="loading-progress">
-        <circle r="40%" cx="50%" cy="50%" />
-        <circle r="40%" cx="50%" cy="50%" />
-      </svg>
-      <div class="loading-progress-text"></div>
+    <div id="loading-screen" style="height: 100vh; width: 100vw; background-color: black; display: flex; justify-content: center; align-items: center; position: fixed;">
+      <div style="display: flex; align-items: center; gap: 1rem;">
+        <div class="spinner"></div>
+        <div class="loading-text">
+          carregando <span class="dot"> . </span><span class="dot"> . </span><span class="dot"> . </span>
+        </div>
       </div>
     </div>
 
-    <div id="blazor-error-ui">
-      An unhandled error has occurred.
-      <a href="" class="reload">Reload</a>
-      <a class="dismiss">🗙</a>
-    </div>
-    <script src="_framework/blazor.webassembly.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <style>
+      .spinner {
+        border: 4px solid rgba(255, 255, 255, 0.1);
+        border-top: 4px solid white;
+        border-radius: 50%;
+        width: 2.0rem;
+        height: 2.0rem;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      .loading-text {
+        color: white;
+        font-size: 1.3rem;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      }
+
+      .dot {
+        animation: bounce 1.2s infinite;
+        display: inline-block;
+      }
+
+        .dot:nth-child(1) {
+          animation-delay: 0s;
+        }
+
+        .dot:nth-child(2) {
+          animation-delay: 0.2s;
+        }
+
+        .dot:nth-child(3) {
+          animation-delay: 0.4s;
+        }
+
+      @keyframes bounce {
+        0%, 80%, 100% {
+          transform: translateY(0);
+        }
+
+        40% {
+          transform: translateY(-6px);
+        }
+      }
+    </style>
+  </div>
+  
+
+
+
+  <div id="blazor-error-ui">
+    An unhandled error has occurred.
+    <a href="" class="reload">Reload</a>
+    <a class="dismiss">🗙</a>
+  </div>
+  <script src="_framework/blazor.webassembly.js"></script>
+  <script>navigator.serviceWorker.register('service-worker.js');</script>
+  <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
