--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Modulum.Client</title>
+  <title>Modulum</title>
   <base href="/" />
   <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="css/app.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/googleapis-family-Roboto.css" />
   <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="logo.png" />
   <link href="Modulum.Client.styles.css" rel="stylesheet" />
   <link href="manifest.webmanifest" rel="manifest" />
   <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="app">
-    <div id="loading-screen" style="height: 100vh; width: 100vw; background-color: black; display: flex; justify-content: center; align-items: center; position: fixed;">
+    <div id="loading-screen" style="height: 100vh; width: 100vw; background-color: #000000; display: flex; justify-content: center; align-items: center; position: fixed; ">
       <div style="display: flex; align-items: center; gap: 1rem;">
         <div class="spinner"></div>
         <div class="loading-text">
@@ -79,7 +79,7 @@
       }
     </style>
   </div>
-  
+
 
 
 
