--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="app">
-    <div id="loading-screen" style="height: 100vh; width: 100vw; background-color: #000000; display: flex; justify-content: center; align-items: center; position: fixed; ">
+    <div id="loading-screen" style="height: 100vh; width: 100vw; background-color: #2D2D3A; display: flex; justify-content: center; align-items: center; position: fixed; ">
       <div style="display: flex; align-items: center; gap: 1rem;">
         <div class="spinner"></div>
         <div class="loading-text">
