--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/googleapis-family-Roboto.css" />
   <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+  <link href="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" href="logo.png" />
   <link href="Modulum.Client.styles.css" rel="stylesheet" />
   <link href="manifest.webmanifest" rel="manifest" />
@@ -91,6 +92,7 @@
   <script src="_framework/blazor.webassembly.js"></script>
   <script>navigator.serviceWorker.register('service-worker.js');</script>
   <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+  <script src="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.js"></script>
 </body>
 
 </html>
